--- a/src/main/resources/templates/changeInfo.html
+++ b/src/main/resources/templates/changeInfo.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>
 		Cambiar la contrasena del usuario <span
-			th:text="${session.citizen.nombre}" />
+			th:text="${session.loader.nombre}" />
 	</h1>
 	<form method="POST" action="changeInfo">
 		<table>
