Cambios realizados en clases, log.html y bbdd

--- a/src/main/resources/templates/log.html
+++ b/src/main/resources/templates/log.html
@@ -19,6 +19,10 @@
       		<td><input type="password" name="password" align="left" size="15" required="required" placeholder="Password"/></td>
       	</tr>
       	<tr>
+    	    <td align="right">Tipo de Usuario: </td>
+      		<td><input type="text" name="tipoUser" align="left" size="15" required="required" placeholder="Tipo"/></td>
+      	</tr>
+      	<tr>
     	    <td><input id="btnEnviar" type="submit" value="Enviar"/></td>
     	    <td><input id="btnReset" type="reset" value="Reset"/></td>
       	</tr>
