Terminada nueva funcionalidad con el nuevo tipo, corregida BBDD y tests

--- a/src/main/resources/templates/log.html
+++ b/src/main/resources/templates/log.html
@@ -20,7 +20,7 @@
       	</tr>
       	<tr>
     	    <td align="right">Tipo de Usuario: </td>
-      		<td><input type="text" name="tipoUser" align="left" size="15" required="required" placeholder="Tipo"/></td>
+      		<td><input type="text" name="kind" align="left" size="15" required="required" placeholder="Tipo"/></td>
       	</tr>
       	<tr>
     	    <td><input id="btnEnviar" type="submit" value="Enviar"/></td>
