Primera Versión de visualización de información
Se ha añadido un método en la clase LoaderDAODummy.java para obtener el
Map de los códigos de los kinds (Intentaré más adelante hacer de este
Map un Bean). En el html view.html añadimos la información del kind y
kindcode.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -28,6 +28,10 @@
         <td><span th:text="${session.loader.apellidos}"/></td>
     </tr>
     <tr>
+        <td>KindCode: </td>
+        <td><span th:text="${session.loader.kindCode}"/></td>
+    </tr>
+    <tr>
     	<td>Direccion: </td>
     	<td><span th:text="${session.loader.direccionPostal}"/></td>
     </tr>
