--- a/src/main/resources/templates/errorContrasena.html
+++ b/src/main/resources/templates/errorContrasena.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8"/>
     <title>Error 404</title>
 </head>
 <body>
 
-<h2>Error: los valores de la contrasena no son validos</h2>
+<h2>Error: los valores de la contraseña no son válidos</h2>
 <a href="/">Volver a inicio</a>
 </body>
 </html>
