--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,10 +1,12 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="UTF-8"/>
     <title>Spring MVC Form Handling</title>
 </head>
 <body>
 
-<h2>Tu informacion: </h2>
+<h2>Tu información: </h2>
 <form method="POST" action="changeEmail">
 		<table>
 			<tr>
@@ -21,23 +23,28 @@
    <table>
     <tr>
         <td>Nombre: </td>
-        <td><span th:text="${session.loader.nombre}"/></td>
+        <td><span th:text="${session.loader.nombre}"/> 
+        <span th:text="${session.loader.apellidos}"/></td>
     </tr>
     <tr>
-        <td>Apellidos: </td>
-        <td><span th:text="${session.loader.apellidos}"/></td>
+    	<td>Localización: </td>
+    	<td><span th:text="${session.loader.direccionPostal}"/></td>
+    </tr>
+    <tr>
+    	<td>E-Mail: </td>
+    	<td><span th:text="${session.loader.email}"/></td>
+    </tr>
+    <tr>
+    	<td>Identificador: </td>
+    	<td><span th:text="${session.loader.id}"/></td>
+    </tr>
+    <tr>
+    	<td>Tipo de Usuario: </td>
+    	<td><span th:text="${session.loader.kind}"/></td>
     </tr>
     <tr>
         <td>KindCode: </td>
         <td><span th:text="${session.loader.kindCode}"/></td>
-    </tr>
-    <tr>
-    	<td>Direccion: </td>
-    	<td><span th:text="${session.loader.direccionPostal}"/></td>
-    </tr>
-    <tr>
-    	<td>Nacionalidad: </td>
-    	<td><span th:text="${session.loader.nacionalidad}"/></td>
     </tr>
     <tr>
     	<td><a href="changeInfo">Modificar datos</a></td>
