Añadida la localización a los html.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -28,7 +28,8 @@
     </tr>
     <tr>
     	<td>Localización: </td>
-    	<td><span th:text="${session.loader.direccionPostal}"/></td>
+    	<td>"<span th:text="${session.loader.latitud}"/>"N - 
+    	"<span th:text="${session.loader.longitud}"/>"W</td>
     </tr>
     <tr>
     	<td>E-Mail: </td>
