--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -23,8 +23,7 @@
    <table>
     <tr>
         <td>Nombre: </td>
-        <td><span th:text="${session.loader.nombre}"/> 
-        <span th:text="${session.loader.apellidos}"/></td>
+        <td><span th:text="${session.loader.nombre}"/></td>
     </tr>
     <tr>
     	<td>Localización: </td>
