--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -36,7 +36,7 @@
     </tr>
     <tr>
     	<td>Identificador: </td>
-    	<td><span th:text="${session.loader.id}"/></td>
+    	<td><span th:text="${session.loader.identificador}"/></td>
     </tr>
     <tr>
     	<td>Tipo de Usuario: </td>
